<resources>
    <string name="app_name">Bartout</string>
    <string name="drawer_open">Drawer öffnen</string>
    <string name="drawer_close">Drawer schliessen</string>

    <!-- Drawer Items -->
    <integer name="drawer_item_count">6</integer>
    <string name="title_home">Home</string>
    <string name="title_search">Suche</string>
    <string name="title_bartour">Bartour bearbeiten</string>
    <string name="title_drink">Trinken</string>
    <string name="title_ranking">Rangliste</string>
    <string name="title_drive_fitness">Fahrtüchtigkeit</string>
    <string name="title_chronicle">Chronik</string>
    <string name="title_user">Benutzer</string>

    <string name="action_settings">Settings</string>

    <string name="toast_bartout_active">Es ist bereits eine Bartour aktiv. Beenden Sie diese zuerst.</string>

    <!-- activity_bartour Items -->
    <string name="tour_name">Tour Name</string>
    <string name="users">Mitglieder</string>
    <string name="user_name">Name</string>
    <string name="bartour_save">Bartour speichern</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_empty">Das Feld darf nicht leer sein.</string>
    <string name="error_no_users">Es muss mindestens einen Benutzer geben.</string>

    <!-- DriveFitnessAdapter Items -->
    <string name="ok">OK!</string>
    <string name="no">NO!</string>
    <string name="error_zero">Die Zahl darf nicht 0 sein</string>
    <string name="ok_text">Ok</string>
    <string name="cancel_text">Abbrechen</string>
    <string name="stopBartour_text">Bartour beenden</string>
    <string name="buttonBeerLarge_text">grosses Bier</string>
    <string name="buttonBeerSmall_text">Stange Bier</string>
    <string name="buttonWine_text">Wein</string>
    <string name="buttonCoctailStrong_text">starker Drink</string>
    <string name="buttonOtherBeverage_text">Anderes Getränk</string>
    <string name="buttonCoctailSoft_text">schwacher Drink</string>
    <string name="buttonShot_text">Shot</string>
    <string name="editTextBeverageName_default"><![CDATA[<Getränkename>]]></string>
    <string name="textViewBeverageVolume">Grösse in Litern:</string>
    <string name="textViewAlcoholicStrength">Alkoholgehalt in % Vol.:</string>
    <string name="buttonDrink_text">trinken</string>
    <string name="search_from_here">Von hier suchen</string>
    <string name="search_filter_bar">Bar</string>
    <string name="search_filter_bar_name">bar</string>
    <string name="search_filter_restaurant">Restaurant</string>
    <string name="search_filter_restaurant_name">restaurant</string>
    <string name="search_filter_food">Essen</string>
    <string name="search_filter_food_name">food</string>
    <string name="search_filter_club">Club</string>
    <string name="search_filter_club_name">night_club</string>
    <string name="search_filter_atm">Bankomat</string>
    <string name="search_filter_atm_name">atm</string>
    <string name="search_filter_bank">Bank</string>
    <string name="search_filter_bank_name">bank</string>
    <string name="title_search_filter">Filtern</string>
    <string name="title_drink_beverage">Gertänk</string>
    <array name="search_filters">
        <item>Bar</item>
        <item>Restaurant</item>
        <item>Essen</item>
        <item>Club</item>
        <item>Bankomat</item>
    </array>
    <string name="toast_location_check_in_success">Erfolgreich eingecheckt!</string>
    <string name="toast_location_check_in_fail">Keine Bartour aktiv!</string>
    <string name="timeline_name">Timeline</string>
    <string name="map_name">Karte</string>

</resources>
