<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context="ch.zhaw.bartout.controller.DrinkActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:id="@+id/buttonBeerLarge"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scaleType="fitCenter"
            android:focusableInTouchMode="true"
            android:text="@string/buttonBeerLarge_text"
            android:onClick="buttonBierLargeOnClick" />

        <Button
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:id="@+id/buttonBeerSmall"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/buttonBeerLarge"
            android:layout_toEndOf="@+id/buttonBeerLarge"
            android:scaleType="fitCenter"
            android:text="@string/buttonBeerSmall_text"
            android:onClick="buttonBierSmallOnClick" />

        <Button
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:id="@+id/buttonWine"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/buttonBeerSmall"
            android:layout_toEndOf="@+id/buttonBeerSmall"
            android:text="@string/buttonWine_text"
            android:onClick="buttonWineOnClick" />

        <Button
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:id="@+id/buttonCoctailStrong"
            android:layout_below="@+id/buttonBeerLarge"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:longClickable="true"
            android:text="@string/buttonCoctailStrong_text"
            android:onClick="buttonCoctailStrongOnClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonOtherBeverage_text"
            android:id="@+id/buttonOtherBeverage"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="buttonOtherBeverageOnClick" />

        <Button
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:id="@+id/buttonCoctailSoft"
            android:layout_below="@+id/buttonBeerSmall"
            android:layout_toRightOf="@+id/buttonCoctailStrong"
            android:layout_toEndOf="@+id/buttonCoctailStrong"
            android:text="@string/buttonCoctailSoft_text"
            android:onClick="buttonCoctailSoftOnClick" />

        <Button
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:text="@string/buttonShot_text"
            android:id="@+id/buttonShot"
            android:layout_below="@+id/buttonWine"
            android:layout_toRightOf="@+id/buttonCoctailSoft"
            android:layout_toEndOf="@+id/buttonCoctailSoft"
            android:onClick="buttonShotOnClick" />
    </RelativeLayout>

    <include layout="@layout/navigation_drawer" />


</android.support.v4.widget.DrawerLayout>
